--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webaristo Bank</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="images/webaristo-bank-icon.png" />
   </head>
   <body>
     <input type="checkbox" class="checkbox" />
