Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <link rel="icon" type="image/png" href="images/webaristo-bank-icon.png" />
   </head>
   <body>
-    <input type="checkbox" class="checkbox" />
+    <div class="appearence-toggle">
+      <input type="checkbox" class="checkbox" />
+    </div>
+    <div class="container">
+      <aside>
+        <div class="logo">
+          <a href="index.html">
+            <img
+              src="images/webaristo-bank-icon.png"
+              alt="Webaristo Bank Logo"
+              class="webaristo-logo"
+            />
+          </a>
+        </div>
+        <div class="menu">
+          <div class="dashboard">
+            <img src="images/dashboard-icon.png" alt="Dashboard Icon" />
+            <h4><a href="index.html">Dashboard</a></h4>
+          </div>
+          <div class="transactions">
+            <img src="images/transactions-icon.png" alt="Transactions Icon" />
+            <h4><a href="transactions.html">Transactions</a></h4>
+          </div>
+          <div class="settings">
+            <img src="images/settings-icon.png" alt="Settings Icon" />
+            <h4><a href="settings.html">Settings</a></h4>
+          </div>
+        </div>
+      </aside>
+      <header></header>
+    </div>
   </body>
 </html>
