Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <link rel="icon" type="image/png" href="images/webaristo-bank-icon.png" />
   </head>
   <body>
-    <div class="appearence-toggle">
-      <input type="checkbox" class="checkbox" />
-    </div>
     <div class="container">
       <aside>
         <div class="logo">
@@ -37,7 +34,26 @@
           </div>
         </div>
       </aside>
-      <header></header>
+      <main>
+        <header>
+          <div class="title-container">
+            <img src="images/bank.png" alt="Bank Icon" class="bank-icon" />
+            <div class="title">Webaristo Bank</div>
+          </div>
+          <div class="profile">
+            <img
+              src="images/notification-bell.png"
+              alt="Notifications"
+              class="bell-icon"
+            />
+            <img src="images/profile.jpg" alt="Profile" class="profile-photo" />
+            <span>Gabrieli Giorgadze</span>
+            <input type="checkbox" id="mode-toggle" class="checkbox" />
+            <label for="mode-toggle" class="toggle-label"></label>
+          </div>
+        </header>
+        <!-- აქ მოვა სხვა main კონტენტი -->
+      </main>
     </div>
   </body>
 </html>
