--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
           <div class="settings">
             <img src="images/settings-icon.png" alt="Settings Icon" />
-            <h4><a href="settings.html">Settings</a></h4>
+            <h4><a href="#">Settings</a></h4>
           </div>
         </div>
       </aside>
