--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
               class="bell-icon"
             />
             <img src="images/profile.jpg" alt="Profile" class="profile-photo" />
-            <span>Gabrieli Giorgadze</span>
+            <span
+              >Gabrieli <br />
+              Giorgadze</span
+            >
             <input type="checkbox" id="mode-toggle" class="checkbox" />
             <label for="mode-toggle" class="toggle-label"></label>
           </div>
