--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <aside>
         <div class="logo">
-          <a href="index.html">
+          <a href="https://webaristo.com" target="_blank">
             <img
               src="images/webaristo-bank-icon.png"
               alt="Webaristo Bank Logo"
