Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             <img src="images/transactions-icon.png" alt="Transactions Icon" />
             <h4><a href="transactions.html">Transactions</a></h4>
           </div>
+          <div class="cards">
+            <img src="images/credit-cards.png" alt="Credit Cards Icon" />
+            <h4><a href="#">My Cards</a></h4>
+          </div>
+          <div class="currency">
+            <img
+              src="images/currency-exchange.png"
+              alt="Currency Exchange Icon"
+            />
+            <h4><a href="#">Currency Exchange</a></h4>
+          </div>
           <div class="settings">
             <img src="images/settings-icon.png" alt="Settings Icon" />
             <h4><a href="#">Settings</a></h4>
