--- a/transactions.html
+++ b/transactions.html
@@ -3,7 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Transactions • Webaristo Bank</title>
+    <link rel="stylesheet" href="styles/transactions.css" />
+    <link rel="icon" type="image/png" href="images/webaristo-bank-icon.png" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <aside>
+        <div class="logo">
+          <a href="https://webaristo.com" target="_blank">
+            <img
+              src="images/webaristo-bank-icon.png"
+              alt="Webaristo Bank Logo"
+              class="webaristo-logo"
+            />
+          </a>
+        </div>
+        <div class="menu">
+          <div class="dashboard">
+            <img src="images/dashboard-icon.png" alt="Dashboard Icon" />
+            <h4><a href="index.html">Dashboard</a></h4>
+          </div>
+          <div class="transactions">
+            <img src="images/transactions-icon.png" alt="Transactions Icon" />
+            <h4><a href="transactions.html">Transactions</a></h4>
+          </div>
+          <div class="cards">
+            <img src="images/credit-cards.png" alt="Credit Cards Icon" />
+            <h4><a href="#">My Cards</a></h4>
+          </div>
+          <div class="currency">
+            <img
+              src="images/currency-exchange.png"
+              alt="Currency Exchange Icon"
+            />
+            <h4><a href="#">Currency Exchange</a></h4>
+          </div>
+          <div class="settings">
+            <img src="images/settings-icon.png" alt="Settings Icon" />
+            <h4><a href="#">Settings</a></h4>
+          </div>
+        </div>
+      </aside>
+      <main>
+        <header>
+          <div class="title-container">
+            <img src="images/bank.png" alt="Bank Icon" class="bank-icon" />
+            <div class="title">Webaristo Bank</div>
+          </div>
+          <div class="profile">
+            <img
+              src="images/notification-bell.png"
+              alt="Notifications"
+              class="bell-icon"
+            />
+            <img src="images/profile.jpg" alt="Profile" class="profile-photo" />
+            <span
+              >Gabrieli <br />
+              Giorgadze</span
+            >
+            <input type="checkbox" id="mode-toggle" class="checkbox" />
+            <label for="mode-toggle" class="toggle-label"></label>
+          </div>
+        </header>
+        <!-- აქ მოვა სხვა main კონტენტი -->
+      </main>
+    </div>
+  </body>
 </html>
