--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
           </a>
         </div>
         <div class="menu">
-          <div class="dashboard">
-            <img src="images/dashboard-icon.png" alt="Dashboard Icon" />
-            <h4><a href="index.html">Dashboard</a></h4>
-          </div>
-          <div class="transactions">
-            <img src="images/transactions-icon.png" alt="Transactions Icon" />
-            <h4><a href="transactions.html">Transactions</a></h4>
-          </div>
+          <a href="index.html">
+            <div class="dashboard">
+              <img src="images/dashboard-icon.png" alt="Dashboard Icon" />
+              <h4>Dashboard</h4>
+            </div>
+          </a>
+          <a href="transactions.html">
+            <div class="dashboard">
+              <img src="images/transactions-icon.png" alt="Transactions Icon" />
+              <h4>Transactions</h4>
+            </div>
+          </a>
           <div class="cards">
             <img src="images/credit-cards.png" alt="Credit Cards Icon" />
             <h4><a href="#">My Cards</a></h4>
