--- a/transactions.html
+++ b/transactions.html
@@ -27,7 +27,7 @@
             </div>
           </a>
           <a href="transactions.html">
-            <div class="dashboard">
+            <div class="transactions">
               <img src="images/transactions-icon.png" alt="Transactions Icon" />
               <h4>Transactions</h4>
             </div>
