Update transactions.html, style.css, transactions.css

--- a/index.html
+++ b/index.html
@@ -70,7 +70,29 @@
             <label for="mode-toggle" class="toggle-label"></label>
           </div>
         </header>
-        <!-- აქ მოვა სხვა main კონტენტი -->
+        <!-- Dashboard -->
+        <section class="dashboard-content">
+          <div class="card-image-card">
+            <img
+              src="images/tbc_concept_card.png"
+              alt="Mastercard"
+              class="card-image"
+            />
+            <h2>Webaristo Bank Card</h2>
+            <p>Checking Account: <strong>$8,500</strong></p>
+            <p>Savings Account: <strong>$15,200</strong></p>
+          </div>
+
+          <div class="summary-cards">
+            <div class="summary-card">
+              <h3>Total Spent This Month</h3>
+              <p>$2,300</p>
+              <div class="progress-bar">
+                <div class="progress"></div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
