--- a/transactions.html
+++ b/transactions.html
@@ -70,7 +70,32 @@
             <label for="mode-toggle" class="toggle-label"></label>
           </div>
         </header>
-        <!-- აქ მოვა სხვა main კონტენტი -->
+        <section class="transactions-content">
+          <h2>Recent Transactions</h2>
+          <ul class="transaction-list">
+            <li>
+              <span class="date">2025-07-05</span>
+              <span class="name">Grocery Store</span>
+              <span class="amount negative">- $120 </span>
+              <span class="category">Food</span>
+              <img src="images/grocery.png" alt="Food Icon" class="tx-icon" />
+            </li>
+            <li>
+              <span class="date">2025-07-03</span>
+              <span class="name">Gym Membership</span>
+              <span class="amount negative">- $50 </span>
+              <span class="category">Health</span>
+              <img src="images/health.png" alt="Health Icon" class="tx-icon" />
+            </li>
+            <li>
+              <span class="date">2025-07-01</span>
+              <span class="name">Salary</span>
+              <span class="amount positive">+ $3,500 </span>
+              <span class="category">Income</span>
+              <img src="images/income.png" alt="Income Icon" class="tx-icon" />
+            </li>
+          </ul>
+        </section>
       </main>
     </div>
   </body>
